# rust-axum-mongodb

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
src/: db.rs  error.rs  handler.rs  main.rs  model.rs  response.rs  schema.rs
